added more information to the readme

--- a/README
+++ b/README
@@ -18,5 +18,9 @@ BOSS 1 - AntiGingy
 
 The boss for the first level is an antiGingerbread man.  The boss has two types of attacks punching and throwing a ball. To kill the boss requires a hit count of 25.  When you defeat the boss a flag appears to go to the main lobby of the game.
 
+BOSS 2 - Big Bad Wolf
+
+Temporarily have added the second boss for the red riding hood level.  The current setup is like the first level.  The user must find a key then unlock a door to go to the boss. I would like more creative ideas for levels.  The level for now is just testing.
+
 	-Main Lobby-
 The main lobby is a library that has books that transports your character to different levels.
